header burger menu fixed. overflow added

--- a/frontend/src/app/components/header/header.component.scss
+++ b/frontend/src/app/components/header/header.component.scss
@@ -23,6 +23,7 @@
   font-family: "Doppio One", sans-serif;
   color: #398dca;
 }
+
 /* @media (max-width: 767px) {
     .header-container {
         justify-content: space-between;
@@ -59,14 +60,22 @@
   font-size: 22px;
 }
 
-/* .header-container .auth_links-container {
-    margin-top: 14px;
-} */
+.header-container .auth_links-container {
+  display: flex;
+  flex-direction: row;
+}
+
 
 .header-container .auth_links-container > a {
+  height: 27px;
   text-decoration: none;
   color: #398dca;
   font-size: 24px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: inline-block;
+  max-width: 110px;
+  padding-top: 1px;
 }
 
 .header-container .auth_links-container :hover {
@@ -79,7 +88,7 @@
 
 .header-container .registration-link {
   opacity: 70%;
-  margin-right: 40px;
+  margin-right: 30px;
 }
 
 .header-container .menu-icon-wrapper {
@@ -103,6 +112,7 @@
     flex-direction: column;
     width: 160px;
     z-index: 50;
+    background-color: #b5eeff;
   }
 
   .burger-menu-container .header_menu-container {
@@ -130,11 +140,12 @@
     position: relative;
     display: block;
     width: 100%;
-    background-color: #b5eeff;
+
     padding: 7px 30px 7px 10px;
   }
 
   .burger-menu-container .auth_links-container {
+    margin-top: 5px;
     display: flex;
     flex-direction: column;
   }
@@ -143,10 +154,14 @@
     text-decoration: none;
     color: #398dca;
     font-size: 22px;
-    background-color: #b5eeff;
-    padding: 7px 30px 7px 10px;
+    //padding: 7px 30px 7px 10px;
+    padding-left: 10px;
     opacity: 100%;
-    margin: 0px;
+    max-width: 150px;
+  }
+  .header-container .registration-link {
+    opacity: 70%;
+    margin-right: 0px;
   }
 
   .header-container .menu-icon-wrapper {
