--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,10 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Average+Sans&family=Doppio+One&display=swap");
-@import "bootstrap/scss/bootstrap";
-/*
-or import only the bootstrap scss files that your application actually needs,
-as described in the Bootstrap customization guide:
-https://getbootstrap.com/docs/5.2/customize/sass/#importing
-*/
+
 [class*="_container"] {
   max-width: 1170px;
   margin: 0 auto;
